--- a/keyEvent.html
+++ b/keyEvent.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="module" src="keyEvent.js"></script>
 </head>
 <body>
     <p>This page turns violet when you press the key V down </p>
