--- a/mouseDrawing.html
+++ b/mouseDrawing.html
@@ -7,41 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        canvas {
+       canvas{
   border: 1px solid black;
   width: 560px;
   height: 360px;
 }
     </style>
-    <script type="module" src="mouseDrawing.js"></script>
+
 </head>
 <body>
     <h1>Drawing with mouse events</h1>
-    <canvas id="convas" width="560" height="360"></canvas>
+    <canvas id="myPics" ></canvas>
 </body>
+<!-- <script type="module" src="mouseDrawing.js"></script> -->
+<script>
+// When true, moving the mouse draws on the canvas
+let isDrawing = false;
+let x = 0;
+let y = 0;
 
+const myPics = document.getElementById('myPics');
+const context = myPics.getContext('2d');
+
+// event.offsetX, event.offsetY gives the (x,y) offset from the edge of the canvas.
+
+// Add the event listeners for mousedown, mousemove, and mouseup
+myPics.addEventListener('mousedown', (e) => {
+x = e.offsetX;
+y = e.offsetY;
+isDrawing = true;
+});
+
+myPics.addEventListener('mousemove', (e) => {
+if (isDrawing) {
+drawLine(context, x, y, e.offsetX, e.offsetY);
+x = e.offsetX;
+y = e.offsetY;
+}
+});
+
+window.addEventListener('mouseup', (e) => {
+if (isDrawing) {
+drawLine(context, x, y, e.offsetX, e.offsetY);
+x = 0;
+y = 0;
+isDrawing = false;
+}
+});
+
+function drawLine(context, x1, y1, x2, y2) {
+context.beginPath();
+context.strokeStyle = 'black';
+context.lineWidth = 1;
+context.moveTo(x1, y1);
+context.lineTo(x2, y2);
+context.stroke();
+context.closePath();
+}</script>
 </html>
 
 
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        canvas{
- background: yellow;
-  height: 500 px; 
-  width: 700px; 
-  border:1px solid black;
-        }
-    </style>
-    <script type="module" src="mouseDrawing.js"></script>
-</head>
-<body>
-    <p>Drawing with mouse event</p>
-    <canvas id="canvas" ></canvas>
-</body>
-</html> -->
