focus event and blur event

--- a/FocusEvent.html
+++ b/FocusEvent.html
@@ -5,20 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
 </head>
-<style>
-    dot{
-       display: block;
-       position: absolute;
-       border: 1px solid, black;
-       height: 100px;
-       width: 100px; 
-    }
-</style>
 <body>
-    <p>Touch this page</p>
-    
+    <p>Name: <input type="text" data-help=" Your full name"></p>
+    <p>Age: <input type="text" data-help="your age in years"></p>
+    <p id="help"></p>
 </body>
-<script type="module" src="touchEvent.js"></script>
+<script type="module" src="FocusEvent.js"></script>
 </html>
